Update 'go-orvgqmdb' component image to: quay.io/rhtap_qe/go-orvgqmdb:b5b8523de0eb795cac03ddf7865316006d1ec980@sha256:d32b78068e034f8cdae2855a1883dc64396c2cfe2bf0e40fbf5b178ac44079cf

--- a/components/go-orvgqmdb/overlays/development/deployment-patch.yaml
+++ b/components/go-orvgqmdb/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-orvgqmdb
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-orvgqmdb:b5b8523de0eb795cac03ddf7865316006d1ec980@sha256:d32b78068e034f8cdae2855a1883dc64396c2cfe2bf0e40fbf5b178ac44079cf
+          name: container-image
